Fixed donation popup on mobile.

--- a/techhope/app/globals.css
+++ b/techhope/app/globals.css
@@ -59,7 +59,7 @@ h3,h4,h5,h6 {
     padding: 2rem;
     color: white;
     width: 100%;
-    height: 101vh;
+    height: 100%;
     justify-content: center;
     flex-direction: column;
     display: none;
@@ -86,6 +86,25 @@ h3,h4,h5,h6 {
 }
 .closePopup:hover {
     transform: scale(2.5);
+}
+
+@media screen and (max-width: 960px) {
+    .donationPopup {
+        padding: 1rem;
+    }
+    .donationPopup > h1 {
+        font-size: 1.5rem;
+    }
+    .donationPopup > p {
+        font-size: 1rem;
+    }
+    .closePopup {
+        transform: scale(1.5);
+    }
+
+    .email {
+        font-size: 1.25rem;
+    }
 }
 
 
